fix dark mode background color for mobile devices

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,6 +57,7 @@ html {
 html,
 body {
   height: 100%;
+  background-color: var(--mat-sys-surface-container-lowest);
 }
 
 mat-toolbar {
